--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -21,7 +21,7 @@
         <i class="clock">{{dateTime | date: 'hh:mm:ss'}}</i><i class="ap">{{dateTime | date: 'a'}}</i><br/><i class="date">{{dateTime | date: 'dd MMMM, yyyy'}}</i>
       </li>
       <li>
-        <a href="" class="icon"><i class="fa fa-globe-americas"></i><span>19</span></a>
+        <a class="icon"><i class="fa fa-globe-americas"></i><span>19</span></a>
         <!--<ul>
           <li><a href=""> One notification 1</a>
           <li><a href=""> One notification 2</a>
@@ -33,7 +33,7 @@
         </ul>-->
       </li>
       <li>
-        <a href="" class="icon"> <i class="fa fa-envelope"></i><span>16</span></a>
+        <a class="icon"> <i class="fa fa-envelope"></i><span>16</span></a>
         <!--<ul>
           <li><a href=""> One Message 1</a>
           <li><a href=""> One Message 2</a>
@@ -45,7 +45,7 @@
         </ul>-->
       </li>
       <li >
-        <a href="" class="user">
+        <a class="user">
           <img class="text" src="{{photo}}" alt="">
           <div class="text"><i class="name">{{userName}}</i><br/><i class="des">{{userType}}</i></div>
         </a>
