--- a/src/app/create-invoice/create-invoice.component.html
+++ b/src/app/create-invoice/create-invoice.component.html
@@ -60,7 +60,7 @@
             <td>{{data.unit}}</td>
             <td>{{(data.price * data.unit)}}</td>
             <td>{{data.discount}}%</td>
-            <td class="center"><a href=""><i class="fa fa-times-circle"></i></a></td>
+            <td class="center"><a (click)="removePro(data)"><i class="fa fa-times-circle"></i></a></td>
           </tr>
           </tbody>
         </table>
