--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -14,6 +14,10 @@
       <li *ngIf="access_mode === '0'|| access_mode === '3' || access_mode === '2'"><a routerLink="/main/report" routerLinkActive="active"> Report</a></li>
       <li *ngIf="access_mode === '0' || access_mode === '3'"><a routerLink="/main/setting" routerLinkActive="active"> Setting</a></li>
     </ul>
+    <a routerLink="/main/about" style="position: fixed;
+    bottom: 15px;
+    left: 40px;
+    color: white;">About US</a>
   </nav>
   <nav class="top_menu">
     <ul>
